fix data + re implement getProductForCustomer