@@ -84,7 +84,7 @@ public class ProductServiceImpl implements ProductService {
             sortable = expiredSortType.toString().equals("ASC") ? Sort.by("expiredDate").ascending() : Sort.by("expiredDate").descending();
         }
 
-        Pageable pageableWithSort = PageRequest.of(page, limit, sortable);
+        Pageable pageableWithSort = PageRequest.of(page, limit);
         Page<Product> result = productRepository.getProductsForStaff(supermarketId == null ? null : UUID.fromString(supermarketId)
                 , name
                 , productCategoryId == null ? null : UUID.fromString(productCategoryId)
@@ -98,11 +98,107 @@ public class ProductServiceImpl implements ProductService {
 
         List<Product> productList = result.stream().toList();
 
-        return null;
+        return new ProductListResponseBody(productList, totalPage, totalProduct);
     }
 
+//    @Override
+//    public ProductListCustomerResponseBody getProductsForCustomer(String name, String supermarketId, String productCategoryId, String productSubCategoryId, Integer page, Integer limit, SortType quantitySortType, SortType expiredSortType, SortType priceSort, UUID pickupPointId) {
+//
+//        if(!pickupPointRepository.findById(pickupPointId).isPresent()){
+//            throw new ItemNotFoundException(HttpStatus.valueOf(AdditionalResponseCode.PICKUP_POINT_NOT_FOUND.getCode()), AdditionalResponseCode.PICKUP_POINT_NOT_FOUND.toString());
+//        }
+//
+//        Sort sortable = Sort.by("productBatchList.expiredDate").ascending();
+//
+//        if (quantitySortType != null) {
+////            sortable = quantitySortType.toString().equals("ASC") ? Sort.by("productBatchList_quantity").ascending() : Sort.by("productBatchList_quantity").descending();
+//
+//        }
+//
+//        if (priceSort != null) {
+////            sortable = priceSort.toString().equals("ASC") ? Sort.by("productBatchList_price").ascending() : Sort.by("productBatchList_price").descending();
+//        }
+//
+//        if (expiredSortType != null) {
+////            sortable = expiredSortType.toString().equals("ASC") ? Sort.by("productBatchList_expiredDate").ascending() : Sort.by("productBatchList_expiredDate").descending();
+//        }
+//
+////        Pageable pageableWithSort = PageRequest.of(page, limit, sortable);
+//        Pageable pageableWithSort = PageRequest.of(page, limit, sortable);
+//
+//        Page<Product> result = productRepository.getProductsForCustomer(supermarketId == null ? null : UUID.fromString(supermarketId)
+//                , name
+//                , productCategoryId == null ? null : UUID.fromString(productCategoryId)
+//                , productSubCategoryId == null ? null : UUID.fromString(productSubCategoryId)
+//                , pickupPointId
+//                , pageableWithSort);
+//
+//        int totalPage = result.getTotalPages();
+//        long totalProduct = result.getTotalElements();
+//
+//        List<Product> productList = result.stream().toList();
+//
+//        HashMap<UUID ,ProductDisplayCustomer> productDisplayCustomerHashMap = new HashMap<>();
+//
+//
+//        for (Product product : productList) {
+//            productDisplayCustomerHashMap.put(product.getId(), new ProductDisplayCustomer(product));
+//        }
+//
+//        for (Product product : productList) {
+//            HashMap<String, ProductBatchDisplayCustomer> similarBatchTrackingHashmap = new HashMap<>();
+//            for (ProductBatch productBatch : product.getProductBatchList()) {
+//                if(similarBatchTrackingHashmap.containsKey(productBatch.getExpiredDate().toString())){
+//                    // add id to same expired date batch
+//                   similarBatchTrackingHashmap.get(productBatch.getExpiredDate().toString()).getIdList().add(productBatch.getId());
+//                    // add quantity to same expired date batch
+//                   similarBatchTrackingHashmap.get(productBatch.getExpiredDate().toString()).setQuantity(similarBatchTrackingHashmap.get(productBatch.getExpiredDate().toString()).getQuantity() + productBatch.getQuantity());
+//                } else {
+//                    similarBatchTrackingHashmap.put(productBatch.getExpiredDate().toString(), new ProductBatchDisplayCustomer(productBatch));
+//                }
+//            }
+//            // sort batch with expired date
+//            List<ProductBatchDisplayCustomer> productBatchDisplayCustomerList = similarBatchTrackingHashmap.values().stream().collect(Collectors.toList());
+//            productBatchDisplayCustomerList.sort((o1, o2) -> o1.getExpiredDate().compareTo(o2.getExpiredDate()));
+//            productDisplayCustomerHashMap.get(product.getId()).setProductBatchList(productBatchDisplayCustomerList);
+//        }
+//
+////        List<ProductDisplayCustomer> productDisplayCustomerList = productDisplayCustomerHashMap.values().stream().collect(Collectors.toList());
+//        // sort by expired date
+//
+////        if (quantitySortType != null) {
+//////            sortable = quantitySortType.toString().equals("ASC") ? Sort.by("productBatchList_quantity").ascending() : Sort.by("productBatchList_quantity").descending();
+////            productDisplayCustomerList.sort((o1, o2) -> quantitySortType.toString().equals("ASC") ?
+////                    o1.getProductBatchList().get(0).getQuantity().compareTo(o2.getProductBatchList().get(0).getQuantity())
+////                    : o2.getProductBatchList().get(0).getQuantity().compareTo(o1.getProductBatchList().get(0).getQuantity()));
+////
+////        }
+////
+////        if (priceSort != null) {
+//////            sortable = priceSort.toString().equals("ASC") ? Sort.by("productBatchList_price").ascending() : Sort.by("productBatchList_price").descending();
+////            productDisplayCustomerList.sort((o1, o2) -> priceSort.toString().equals("ASC") ?
+////                    o1.getProductBatchList().get(0).getPrice().compareTo(o2.getProductBatchList().get(0).getPrice())
+////                    : o2.getProductBatchList().get(0).getPrice().compareTo(o1.getProductBatchList().get(0).getPrice()));
+////
+////        }
+//
+////        if (expiredSortType != null) {
+////            productDisplayCustomerList.sort((o1, o2) -> expiredSortType.toString().equals("ASC") ?
+////                    o1.getProductBatchList().get(0).getExpiredDate().compareTo(o2.getProductBatchList().get(0).getExpiredDate())
+////                    : o2.getProductBatchList().get(0).getExpiredDate().compareTo(o1.getProductBatchList().get(0).getExpiredDate()));
+////        }
+////
+////        if(expiredSortType == null && priceSort == null && quantitySortType == null) {
+////            productDisplayCustomerList.sort((o1, o2) -> o1.getProductBatchList().get(0).getExpiredDate().compareTo(o2.getProductBatchList().get(0).getExpiredDate()));
+////
+////        }
+//
+//        return new ProductListCustomerResponseBody(productDisplayCustomerHashMap.values().stream().collect(Collectors.toList()), totalPage, totalProduct);
+//    }
+
+
     @Override
-    public ProductListResponseBody getProductsForCustomer(String name, String supermarketId, String productCategoryId, String productSubCategoryId, Integer page, Integer limit, SortType quantitySortType, SortType expiredSortType, SortType priceSort, UUID pickupPointId) {
+    public ProductListCustomerResponseBody getProductsForCustomer(String name, String supermarketId, String productCategoryId, String productSubCategoryId, Integer page, Integer limit, SortType quantitySortType, SortType expiredSortType, SortType priceSort, UUID pickupPointId) {
 
         if(!pickupPointRepository.findById(pickupPointId).isPresent()){
             throw new ItemNotFoundException(HttpStatus.valueOf(AdditionalResponseCode.PICKUP_POINT_NOT_FOUND.getCode()), AdditionalResponseCode.PICKUP_POINT_NOT_FOUND.toString());
@@ -110,9 +206,10 @@ public class ProductServiceImpl implements ProductService {
 
         Sort sortable = Sort.by("expiredDate").ascending();
 
-        if (quantitySortType != null) {
-            sortable = quantitySortType.toString().equals("ASC") ? Sort.by("quantity").ascending() : Sort.by("quantity").descending();
-        }
+//        if (quantitySortType != null) {
+//            sortable = quantitySortType.toString().equals("ASC") ? Sort.by("quantity").ascending() : Sort.by("quantity").descending();
+//
+//        }
 
         if (priceSort != null) {
             sortable = priceSort.toString().equals("ASC") ? Sort.by("price").ascending() : Sort.by("price").descending();
@@ -122,10 +219,9 @@ public class ProductServiceImpl implements ProductService {
             sortable = expiredSortType.toString().equals("ASC") ? Sort.by("expiredDate").ascending() : Sort.by("expiredDate").descending();
         }
 
-//        Pageable pageableWithSort = PageRequest.of(page, limit, sortable);
-        Pageable pageableWithSort = PageRequest.of(page, limit);
+        Pageable pageableWithSort = PageRequest.of(page, limit, sortable);
 
-        Page<Product> result = productRepository.getProductsForCustomer(supermarketId == null ? null : UUID.fromString(supermarketId)
+        Page<Object[]> result = productRepository.getProductsNearestExpiredBatchForCustomer(supermarketId == null ? null : UUID.fromString(supermarketId)
                 , name
                 , productCategoryId == null ? null : UUID.fromString(productCategoryId)
                 , productSubCategoryId == null ? null : UUID.fromString(productSubCategoryId)
@@ -135,32 +231,65 @@ public class ProductServiceImpl implements ProductService {
         int totalPage = result.getTotalPages();
         long totalProduct = result.getTotalElements();
 
-        List<Product> productList = result.stream().toList();
+        List<ProductDisplayCustomer> productDisplayCustomerList = new ArrayList<>();
+        HashMap<UUID, ProductDisplayCustomer> productDisplayCustomerHashMap = new HashMap<>();
 
-        HashMap<UUID ,ProductDisplayCustomer> productDisplayCustomerHashMap = new HashMap<>();
+        // get product sort with nearest product batch (no grouping id)
+        for(Object[] objects : result) {
+            LocalDate nearestBatchExpiredDate = (LocalDate) objects[0];
+            Integer nearestBatchPrice = (Integer) objects[1];
+            Integer nearestBatchPriceOriginal = (Integer) objects[2];
+            Product nearestBatchProduct = (Product) objects[3];
+//            Long nearestBatchTotalQuantity = (Long) objects[4];
 
-        for (Product product : productList) {
-            productDisplayCustomerHashMap.put(product.getId(), new ProductDisplayCustomer(product));
+            ProductDisplayCustomer productDisplayCustomerTemp = new ProductDisplayCustomer(nearestBatchExpiredDate, nearestBatchPrice
+                    , nearestBatchPriceOriginal, nearestBatchProduct);
+            productDisplayCustomerList.add(productDisplayCustomerTemp);
+            productDisplayCustomerHashMap.put(productDisplayCustomerTemp.getId(), productDisplayCustomerTemp);
         }
 
-        for (Product product : productList) {
-            HashMap<String, ProductBatchDisplayCustomer> similarBatchTrackingHashmap = new HashMap<>();
+        // sort by quantity
+//        if (quantitySortType != null) {
+//            productDisplayCustomerList.sort((o1, o2) -> quantitySortType.toString().equals("ASC")? o1.getNearestExpiredBatch().getQuantity().compareTo(o2.getNearestExpiredBatch().getQuantity())
+//                    : o2.getNearestExpiredBatch().getQuantity().compareTo(o1.getNearestExpiredBatch().getQuantity()));
+//        }
+
+        List<UUID> productIdTargetList = productDisplayCustomerList.stream().map(productDisplayCustomer -> productDisplayCustomer.getId()).collect(Collectors.toList());
+
+        List<Product> productWithAvailableBatch = productRepository.findProductWithAvailableBatch(productIdTargetList, pickupPointId);
+
+        for (Product product : productWithAvailableBatch) {
+            ProductDisplayCustomer productDisplayCustomerTemp = productDisplayCustomerHashMap.get(product.getId());
+            // hashmap use to group batch id
+            HashMap<LocalDate, ProductBatchDisplayCustomer> productBatchDisplayCustomerHashMap = new HashMap<>();
             for (ProductBatch productBatch : product.getProductBatchList()) {
-                if(similarBatchTrackingHashmap.containsKey(productBatch.getExpiredDate().toString())){
-                    // add id to same expired date batch
-                   similarBatchTrackingHashmap.get(productBatch.getExpiredDate().toString()).getIdList().add(productBatch.getId());
-                    // add quantity to same expired date batch
-                   similarBatchTrackingHashmap.get(productBatch.getExpiredDate().toString()).setQuantity(similarBatchTrackingHashmap.get(productBatch.getExpiredDate().toString()).getQuantity() + productBatch.getQuantity());
+                // check if same expired date then add id to nearest expired date batch
+                if(productBatch.getExpiredDate().equals(productDisplayCustomerTemp.getNearestExpiredBatch().getExpiredDate())){
+                    productDisplayCustomerTemp.getNearestExpiredBatch().getIdList().add(productBatch.getId());
+                    productDisplayCustomerTemp.getNearestExpiredBatch().setQuantity(productDisplayCustomerTemp.getNearestExpiredBatch().getQuantity() + productBatch.getQuantity());
                 } else {
-                    similarBatchTrackingHashmap.put(productBatch.getExpiredDate().toString(), new ProductBatchDisplayCustomer(productBatch));
+                    // map and handle same expired date batch
+                    if(productBatchDisplayCustomerHashMap.containsKey(productBatch.getExpiredDate())){
+                        ProductBatchDisplayCustomer productBatchDisplayCustomerTemp = productBatchDisplayCustomerHashMap.get(productBatch.getExpiredDate());
+                        productBatchDisplayCustomerTemp.getIdList().add(productBatch.getId());
+                        productBatchDisplayCustomerTemp.setQuantity(productBatchDisplayCustomerTemp.getQuantity() + productBatch.getQuantity());
+                    }else {
+                        productBatchDisplayCustomerHashMap.put(productBatch.getExpiredDate(), new ProductBatchDisplayCustomer(productBatch));
+                    }
                 }
             }
-            productDisplayCustomerHashMap.get(product.getId()).setProductBatchList(similarBatchTrackingHashmap.values().stream().toList());
+            // map product batch hash map to list
+            List<ProductBatchDisplayCustomer> productBatchDisplayCustomerList = productBatchDisplayCustomerHashMap.values().stream().collect(Collectors.toList());
+            // sort list batch by expired date ASC
+            productBatchDisplayCustomerList.sort((o1, o2) -> o1.getExpiredDate().compareTo(o2.getExpiredDate()));
+            productDisplayCustomerTemp.getOtherProductBatchList().addAll(productBatchDisplayCustomerList);
         }
 
 
-        return new ProductListResponseBody(productDisplayCustomerHashMap.values().stream().toList(), totalPage, totalProduct);
+
+        return new ProductListCustomerResponseBody(productDisplayCustomerList, totalPage, totalProduct);
     }
+
 
     @Override
     public List<SaleReportSupermarketMonthlyResponseBody> getSaleReportSupermarket(UUID supermarketId, Integer year) {
